univention-management-console-module-diagnostic (1.0.12-1) unstable; urgency=medium

  * Bug #35866: read logfiles line wise

 -- Florian Best <best@univention.de>  Mon, 03 Nov 2014 11:26:28 +0100

univention-management-console-module-diagnostic (1.0.11-1) unstable; urgency=medium

  * Bug #35864: fix proxy authentication; remove 'disable proxy' button

 -- Florian Best <best@univention.de>  Thu, 30 Oct 2014 13:50:59 +0100

univention-management-console-module-diagnostic (1.0.10-1) unstable; urgency=medium

  * Bug #34765: fix word wrapping on small screens

 -- Alexander Kläser <klaeser@univention.de>  Thu, 30 Oct 2014 11:04:20 +0100

univention-management-console-module-diagnostic (1.0.9-1) unstable; urgency=medium

  * Bug #34765: disable notifications

 -- Florian Best <best@univention.de>  Wed, 29 Oct 2014 16:53:47 +0100

univention-management-console-module-diagnostic (1.0.8-2) unstable; urgency=medium

  * Bug #34765: add missing CSS file

 -- Florian Best <best@univention.de>  Tue, 28 Oct 2014 20:39:41 +0100

univention-management-console-module-diagnostic (1.0.8-1) unstable; urgency=medium

  * Bug #34765: fix noDataMessage

 -- Florian Best <best@univention.de>  Thu, 23 Oct 2014 11:53:35 +0200

univention-management-console-module-diagnostic (1.0.7-2) unstable; urgency=medium

  * Bug #35654: version bump

 -- Florian Best <best@univention.de>  Thu, 23 Oct 2014 11:32:03 +0200

univention-management-console-module-diagnostic (1.0.7-1) unstable; urgency=low

  * Bug #35864: Add Plugin docstring, inherit from dgrid instead of
  	GalleryPane, add some misssing translations, outsource CSS into external
  	file

 -- Florian Best <best@univention.de>  Tue, 07 Oct 2014 11:42:15 +0200

univention-management-console-module-diagnostic (1.0.6-1) unstable; urgency=low

  * Bug #35864: fix typo

 -- Florian Best <best@univention.de>  Mon, 06 Oct 2014 17:02:55 +0200

univention-management-console-module-diagnostic (1.0.5-1) unstable; urgency=low
