@@ -1,6 +1,7 @@
 univention-management-console-module-diagnostic (1.0.12-1) unstable; urgency=medium
 
   * Bug #35866: read logfiles line wise
+  * use samba/max_open_files instead of security/limits/user/*
 
  -- Florian Best <best@univention.de>  Mon, 03 Nov 2014 11:26:28 +0100
 
